@startuml
skinparam classAttributeIconSize 0

class User {
  +id : int
  +name : string
  +email : string
  +password : string
  +role : string
}

class Model {
  +id : int
  +name : string
  +brand : string
}

class Car {
  +id : int
  +pricePerDay : float
  +status : string
  +year : int
}

Model "0..*" -- "0..*" Car : defines
User "1" -- "0..*" Car : owns
@enduml